# Bloomberg

./: README.md  index.html  metadata.json
cargo_project/: Cargo.toml  README.md
cargo_project/benches/: deserializer.rs
cargo_project/src/: feed.rs  main.rs  state.rs  ui.rs
src/: App.tsx  index.css  interviewQuestions.ts  types.ts
src/components/: OrderBook.tsx
